force-app/main/default/objects/OB_Campaign_Member__c/fields/Transfer_Number__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Number__c</fullName>
    <description>This is auto populated from the fTransfer Number field for the call center.  PLEASE DO NOT DELETE.</description>
    <label>Transfer Number</label>
    <type>Phone</type>
</CustomField>