force-app/main/default/objects/OB_Campaign_Member__c/fields/trigOB_Campaign_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>trigOB_Campaign_Primary_Contact_Email__c</fullName>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>