force-app/main/default/objects/OB_Campaign_Member__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Value to stop duplicates from being imported.  Will eventually replace dupcapture.  Currently places the Person Account Id with the OB Campaign Id.</description>
    <inlineHelpText>Value to stop duplicates from being imported.</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>