force-app/main/default/objects/OB_Campaign_Member__c/fields/UniqueKeyUpdated__c.field-meta.xml
<CustomField>
    <fullName>UniqueKeyUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unique key has been updated with Person Account ID, Address Unique Key, OB Campaign ID.</description>
    <inlineHelpText>Unique key has been updated with Person Account ID, Address Unique Key, OB Campaign ID.</inlineHelpText>
    <label>Unique Key Updated</label>
    <type>Checkbox</type>
</CustomField>