force-app/main/default/objects/OB_Campaign_Member__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>OB Campaign Members</relationshipLabel>
    <relationshipName>OB_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>