force-app/main/default/objects/OB_Campaign_Member__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>User_Address__r.Address__r.Full_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fZip</label>
    <type>Text</type>
</CustomField>