force-app/main/default/objects/OB_Campaign_Member__c/fields/Zip_Post__c.field-meta.xml
<CustomField>
    <fullName>Zip_Post__c</fullName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>